--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "06-notehub-nextjs",
+  "name": "06-notehub-nextjs1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +9,16 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@tanstack/react-query": "^5.90.7",
-    "@tanstack/react-query-devtools": "^5.90.2",
-    "axios": "^1.13.2",
+    "@tanstack/react-query": "^5.90.6",
+    "axios": "^1.13.1",
     "formik": "^2.4.6",
+    "modern-normalize": "^3.0.1",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-paginate": "^8.3.0",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -26,8 +27,6 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
-    "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2",
     "typescript": "^5"
   }
 }
